[package]
name = "containerd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tosone/containerd-rs"
homepage = "https://github.com/tosone/containerd-rs"
description = "containerd sdk"

[[bin]]
name = "ctr"
path = "./src/cmd/ctr.rs"

[dependencies]
tonic = "*"
prost = "~0.9"
prost-types = "~0.9"
tower = {version = "0.4"}
tokio = { version = "~1.14", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }

[build-dependencies]
walkdir = "~2.3"
tonic-build = {version = "~0.6",features = ["prost"]}
