[package]
name = "containerd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tosone/containerd-rs"
homepage = "https://github.com/tosone/containerd-rs"
description = "containerd sdk"
keywords = ["image", "containerd", "sdk", "oci"]
license = "MIT"

[dependencies]
tonic = "~0.6"
prost = "~0.9"
prost-types = "~0.9"
tower = { version = "~0.4" }
tokio = { version = "~1.14", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
nix = "~0.23"
